Some examples from Java 21 course